[package]
name = "my_chapter_14"
version = "0.1.1"
authors = ["Carson Rajcan <carajcan@gmail.com>"]
description = "Practice code I copied while following along from the book"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
