[package]
name = "web_framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http_route = { path = "http_route" }
route_attribute = { path = "route_attribute" }
service_factory = { path = "service_factory" }
